<resources>
    <string name="app_name">手机助手</string>
    <string name="menu_search">搜索</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>

    <string name="icon_gouwuche">&#xe63f;</string>
    <string name="guide_1">全新改版</string>
    <string name="guide_2">视频购物</string>
    <string name="guide_3">评价晒图</string>


    <string name="error_http">网络连接错误</string>
    <string name="error_unkown">未知错误</string>
    <string name="error_system">服务器出错</string>
    <string name="error_account_freeze">账户被冻结，请联系管理员</string>
    <string name="error_api_no_permission">调用了无权限的api接口</string>
    <string name="error_login">用户名或密码错误</string>
    <string name="error_http_400">bad request</string>
    <string name="error_http_404">服务器资源找不到</string>
    <string name="error_http_500">服务器超时</string>
    <string name="error_socket_timeout">网络超时</string>
    <string name="error_socket_unreachable">网络不可用</string>
    <string name="loading">加载中</string>
    <string name="empty_data">暂无数据</string>

    <string name="hot_game">热门游戏</string>
    <string name="hot_top">热门主题</string>
    <string name="hot_app">热门应用</string>
    <string name="et_phone_num">手机号</string>
    <string name="et_password">密码</string>
    <string name="btn_login">登陆</string>
    <string name="account_register">注册账号</string>
    <string name="default_loading">loading</string>

    <string name="app_uninstall">应用卸载</string>
    <string name="download_manager">下载管理</string>
    <string name="apps_update">应用更新</string>
    <string name="sys_setting">系统设置</string>
    <string name="logining">正在登陆...</string>
    <string name="logout">退出登录</string>
    <string name="download">下载</string>
    <string name="error_token">登录失效，请重新登录</string>
    <string name="un_login">未登录</string>


</resources>
