<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<item
        android:title=""
        android:id="@+id/menu_app_update"
        android:icon="@mipmap/ic_ref"
        />
    <item
        android:title="消息"
        android:id="@+id/menu_message"
        android:icon="@mipmap/ic_message"/>
    <item
        android:title="设置"
        android:id="@+id/menu_setting"
        android:icon="@mipmap/ic_setting"/>-->

    <group
        android:id="@+id/id1"
        android:checkableBehavior="single">
    <item
        android:id="@+id/menu_app_update"
        android:icon="@mipmap/ic_ref"
        android:title="@string/apps_update" />

    <item
        android:id="@+id/menu_download_manager"
        android:icon="@mipmap/ic_setting"
        android:title="@string/download_manager" />

    <item
        android:id="@+id/menu_app_uninstall"
        android:icon="@mipmap/ic_ref"
        android:title="@string/app_uninstall" />

    <item
        android:id="@+id/menu_setting"
        android:icon="@mipmap/ic_setting"
        android:title="@string/sys_setting" />

    </group>

    <group
        android:id="@+id/id2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_logout"
            android:icon="@mipmap/ic_message"
            android:title="@string/logout" />
    </group>


</menu>